--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>front-end</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<head>
+  <meta charset=utf-8>
+  <meta name=viewport content="width=device-width,initial-scale=1">
+  <title>front-end</title>
+
+  <style>
+    img{
+      height:200px;
+      width:200px;
+    }
+  </style>
+</head>
+<body>
+这里是dist/index.html
+打包后的首页1112222
+
+
+<div id="index"></div>
+<img src="./nginx.jpg" alt="">
+<img src="./sssss/nginx.jpg" alt="">
+<script src="https://cdn.bootcss.com/axios/0.18.0/axios.min.js"></script>
+<script src="./static/js/index.js"></script>
+</body>
 </html>
